# dawproject-py

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/worklows/: ci.yml
dawproject/: __init__.py  application.py  arrangement.py  auPlugin.py  audio.py  automationTarget.py  boolParameter.py  boolPoint.py  builtInDevice.py  channel.py  clapPlugin.py  clip.py  clipSlot.py  clips.py  compressor.py  contentType.py  dawProject.py  device.py  deviceRole.py  doubleAdapter.py  enumParameter.py  enumPoint.py  eqBand.py  eqBandType.py  equalizer.py  expressionType.py  fileReference.py  integerParameter.py  integerPoint.py  interpolation.py  lane.py  lanes.py  limiter.py  marker.py  markers.py  mediaFile.py  metaData.py  mixerRole.py  nameable.py  noiseGate.py  (+27 more)
examples/: createBitwigProject.py
tests/: smoke.py  test_dawproject.py  test_deserialization.py  test_models.py  test_new_classes.py  test_packaging.py  test_roundtrip.py  test_serialization.py  test_utility.py
