[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dawproject"
version = "0.1.0"
description = "Python library for working with DAWProject files — enabling DAW interoperability."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RoEx LTD"},
]
keywords = ["daw", "dawproject", "music", "audio", "xml", "bitwig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/roex-audio/dawproject-py"
Repository = "https://github.com/roex-audio/dawproject-py"
Issues = "https://github.com/roex-audio/dawproject-py/issues"

[tool.setuptools.packages.find]
include = ["dawproject*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
